# spirals

./: .gitignore  README.md  pyproject.toml
src/Spirals/: spiral.py
